# application-platform

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  README.md  README_TESTING.md  compose.test.yml  compose.yml  deploy.sh  docker-compose.yml  shell.nix  start.sh
.github/workflows/: e2e.yml  (+9 more)
backend/: apl_config_gend_all_phases.yml  dropbox_create_download_links.py  pdf_creation.py  pdf_utils.py  pyproject.toml  read_deck_link_list.py
backend/backend/: __init__.py  csv_export.py  helper.py  load_fixtures.py  logger.py  manage_applications.py  process_config.py  sync_texts.py  validate_config.py
backend/backend/enums/: question_type.py
backend/backend/sql/: add_cascade_delete.sql  add_cascade_delete_minimal.sql  bucket_policies.sql  get_answer_id.sql  init_db.sql  pdf_bucket_policy_PERMISSIVE.sql
backend/backend/utils/: consts.py  utils_datetime.py  utils_regex.py  utils_supabase.py
backend/tests/: test_logger.py  test_process_config.py  test_regex.py
backend/texts/: welcome.md
backend/texts/phase-1/: evaluating.md  failed.md  ongoing.md  passed.md
backend/texts/phase-2/: evaluating.md  failed.md  ongoing.md  passed.md
backend/texts/phase-3/: evaluating.md  failed.md  ongoing.md  passed.md
backend/texts/phase-4/: evaluating.md  failed.md  ongoing.md  passed.md
e2e/: .gitignore  README.md  cypress.config.js  package-lock.json  package.json
frontend/: .gitignore  create_complete_user.js  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
static/: fallback.html  not-open.html
supabase/: config.toml  seed.sql
(+137 files in other folders)
